app.js modified

--- a/success.html
+++ b/success.html
@@ -6,10 +6,11 @@
 <body>
 <div class="row">
   <div class="container">
-    <div class="log-out">
-      <button class="btn btn-lg btn-primary  col-lg-offset-12 button" name="submit" >
-
-    </div>
+    <form align="right" name="form1" ng-submit="logout()">
+	  <label class="logout_button">
+	  <input name="submit" type="submit" id="submit" value="log out">
+	  </label>
+	</form>
 
   </div>
 </div>
