--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
         
         <script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
         <script src="node_modules/angular-cookies/angular-cookies.js"></script>
-
 <link rel="stylesheet" type="text/css" href="node_modules/sweetalert/dist/sweetalert.css">
     </head>
     <!-- edit -->
-    <body ng-controller="loginController">
+    <body>
       <ng-view></ng-view>
-    
-
     </body>
 
 </html>
