--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="./login.css">
 </head>
 </head>
-<body>
+<body ng-controller="loginController">
 <div class="row">
 <div class = "container ">
   <div class="box col-lg-4 col-lg-offset-4">
