--- a/success.html
+++ b/success.html
@@ -1,10 +1,6 @@
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="./success.css">
-</head>
 
-<body>
-<div class="row">
+ <link rel="stylesheet" type="text/css" href="./success.css">
+<div class="row" ng-controller="SuccessController">
   <div class="container">
     <form align="right" name="form1" ng-submit="logout()">
 	  <label class="logout_button">
@@ -15,10 +11,3 @@
   </div>
 </div>
 
-
-
-
-
-
-</body>
-</html>
